--- a/Front/src/fondo.css
+++ b/Front/src/fondo.css
@@ -1,8 +1,3 @@
 body {
-    background-color: #7a9fa3;
+    background-image: url("./assets/2.webp");
   }
-
-.fondo{
-    background-color: #7a9fa3;  
-    size-adjust: auto;
-}
