--- a/Front/src/fondo.css
+++ b/Front/src/fondo.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url("./assets/2.webp");
+    /* background-image: url("./assets/2.webp"); */
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
   }
 
 
