--- a/Front/src/Clientes/clientesStyles.css
+++ b/Front/src/Clientes/clientesStyles.css
@@ -4,3 +4,20 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 10px;
 margin: 0 20px 50px 0
 }
+ .clientes{
+  min-height: "100vh";
+  margin: 24px 24px 60px 24px;
+  padding-bottom: 40px;
+  background-color: "#F5F5F5";
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
+ }
+
+ .table{
+margin-bottom: 80px;
+ }
+
+ .container{
+  margin-top: 15px;
+  margin-bottom: 15px;
+ }
