Modals y cambio de select por buscador

--- a/Front/src/Clientes/clientesStyles.css
+++ b/Front/src/Clientes/clientesStyles.css
@@ -21,3 +21,6 @@ margin-bottom: 80px;
   margin-top: 15px;
   margin-bottom: 15px;
  }
+ .cliente-alert{
+  background-color: #D9D9D9 !important;
+ }
