--- a/Front/src/Ventas/Components/ventaStyles.css
+++ b/Front/src/Ventas/Components/ventaStyles.css
@@ -30,4 +30,21 @@ p{
   margin: 0 !important;
 }
 
-
+/* @media (max-width: 768px) { 
+  .ant-row.my-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  
+  .ant-row.my-row .col1,
+  .ant-row.my-row .col2 {
+    order: 1;
+    width: 100%;
+  }
+  
+  .ant-row.my-row .col3 {
+    order: 2;
+  }
+} */
