--- a/Front/src/Productos/styles.css
+++ b/Front/src/Productos/styles.css
@@ -5,10 +5,7 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: #000000;
-    text-align: left;
+    /* text-align: left; */
     background-color: #7a9fa3;
 }
 
-.table{
-    border-color: black;
-}
