--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -49,3 +49,11 @@ body {
     transform: rotate(360deg);
   }
 }
+
+:where(.css-dev-only-do-not-override-sk7ap8).ant-layout .ant-layout-header {
+  height: 64px;
+  padding-inline: 50px;
+  /* color: red, */
+  line-height: 64px;
+  background: #33384D;
+}
