--- a/Front/src/Clientes/clientesStyles.css
+++ b/Front/src/Clientes/clientesStyles.css
@@ -2,15 +2,15 @@
   background: #F5F5F5;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 10px;
-margin: 0 20px 50px 0
+/* margin: 0 20px 50px 0 */
 }
  .clientes{
   min-height: "100vh";
   margin: 24px 24px 60px 24px;
   padding-bottom: 40px;
   background-color: "#F5F5F5";
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 10px;
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 10px; */
  }
 
  .table{
