--- a/Front/src/Productos/styles.css
+++ b/Front/src/Productos/styles.css
@@ -8,4 +8,7 @@ body {
     /* text-align: left; */
     background-color: #7a9fa3;
 }
-
+ /* p{
+  margin-bottom: 1vh !important;
+  font-weight: 500;
+ } */
